--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   },
   "dependencies": {
     "@jupyter-widgets/base": "^2.0.1 || ^3",
+    "gif.js": "^0.2.0",
     "lodash": ">=4.17.13",
     "roughjs": "^4.3.1"
   },
